--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,16 @@
-<div class="landing-page">
-  <div></div>
-  <div></div>
+<div class="home">
+  <div class="flex justify-center">
+      <%#= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
+      <%= link_to 'Login', new_user_session_path %>
+  </div>
 </div>
+
+<!--<style>
+  .login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+  }
+</style>-->
