--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
-<%= favicon_link_tag 'favicon-32x32.png', rel: 'apple-touch-icon', type: 'image/png' %>
+<%= favicon_link_tag 'favicon.ico' %>
+<%= favicon_link_tag 'favicon.png', rel: 'apple-touch-icon', type: 'image/png' %>
 <title><%= content_for(:title) || "T&D" %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
