--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,10 +12,10 @@
         <span class="floating-label">Email Address</span>
       </div>
       <div class="form-group floating-label-control mb-[35px]">
-        <%= f.text_field  :password,
-                          placeholder: "Password",
-                          class: 'form-control w-full',
-                          required: true
+        <%= f.password_field :password,
+                             placeholder: "Password",
+                             class: 'form-control w-full',
+                             required: true
         %>
         <span class="floating-label">Password</span>
       </div>
