--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@ body {
   font-family: $tertiary-font;
 }
 
+.table th, td {
+  padding: 20px;
+}
+
 .floating-label-control {
   position: relative;
   .form-control {
