--- a/app/views/layouts/admin_dashboard.html.erb
+++ b/app/views/layouts/admin_dashboard.html.erb
@@ -7,29 +7,7 @@
 
   <body class="font-sans text-gray-900">
     <div class="flex h-screen">
-      <div class="w-64 bg-gray-800 text-white p-4 flex flex-col h-full">
-        <div class="text-center mb-6 text-[32px] font-bold tertiary-font">Admin User</div>
-
-        <ul class="space-y-4 flex-grow">
-          <%= link_to admin_users_dashboard_admin_path do %>
-            <li class="block text-white hover:bg-gray-700 px-3 py-2 rounded">
-              <i class="fas fa-tachometer-alt mr-3"></i>
-              <span>Dashboard</span>
-            </li>
-          <% end %>
-          <%= link_to admin_users_users_path do %>
-            <li class="block text-white hover:bg-gray-700 px-3 py-2 rounded">
-              <i class="fas fa-user mr-3"></i>
-              <span>User</span>
-            </li>
-          <% end %>
-        </ul>
-
-        <div class="mt-auto">
-          <%= button_to 'Sign Out', destroy_user_session_path, class: "block text-white hover:bg-gray-700 px-3 py-2 rounded", method: :delete %>
-        </div>
-      </div>
-
+      <%= render 'shared/admin_left_side_bar' %>
       <div class="flex-1 bg-gray-100 p-6 overflow-auto">
         <%= yield %>
       </div>
