Admin Post Article Paging

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,12 @@ body {
     font-size: 10%;
   }
 }
+
+.hidden-scroll {
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+.hidden-scroll::-webkit-scrollbar {
+  display: none;
+}
