--- a/app/views/admin_users/users/index.html.erb
+++ b/app/views/admin_users/users/index.html.erb
@@ -1,3 +1,4 @@
+<div>User</div>
 <table class="table table-striped w-full bg-white shadow-lg rounded-xl">
   <thead class="text-left" style="border-bottom: 2px solid rgb(156 163 175)">
     <tr>
@@ -14,3 +15,6 @@
     <% end %>
   </tbody>
 </table>
+<div class="mt-6 flex justify-center">
+  <%= paginate @users %>
+</div>
