--- a/app/views/layouts/admin_dashboard.html.erb
+++ b/app/views/layouts/admin_dashboard.html.erb
@@ -8,7 +8,7 @@
   <body class="font-sans text-gray-900">
     <div class="flex h-screen">
       <%= render 'shared/admin_left_side_bar' %>
-      <div class="flex-1 bg-gray-100 p-6 overflow-auto">
+      <div class="flex-1 bg-gray-100 p-6 hidden-scroll">
         <%= yield %>
       </div>
     </div>
