--- a/app/views/admin_users/post_articles/index.html.erb
+++ b/app/views/admin_users/post_articles/index.html.erb
@@ -1,19 +1,22 @@
 <div class="flex justify-between">
-  <div class="text-[36px] font-bold tertiary-font">
+  <div class="text-[36px] font-bold tertiary-font bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 bg-clip-text text-transparent">
     Post Article
   </div>
-  <div>
-    <input name="search" type="text" class="search rounded-[10px] bg-white shadow-lg border-0" placeholder="Search Post Article" autocomplete="off">
-  </div>
+  <%= search_form_for @q, url: admin_users_post_articles_path, method: :get do |f| %>
+    <%= f.search_field :id_eq, class: "search rounded-[10px] bg-white shadow-lg border-0", placeholder: "Search by ID" %>
+    <%= f.search_field :title_cont, class: "search rounded-[10px] bg-white shadow-lg border-0", placeholder: "Search by Title" %>
+    <%= f.search_field :content_cont, class: "search rounded-[10px] bg-white shadow-lg border-0", placeholder: "Search by Content" %>
+    <%= f.submit "Search", class: "text-white cursor-pointer bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 p-2 rounded-[10px] shadow-lg"%>
+  <% end %>
 </div>
 <table class="table table-striped w-full bg-white shadow-lg rounded-xl">
   <thead class="text-left" style="border-bottom: 2px solid rgb(156 163 175)">
     <tr>
-      <th>No.</th>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Updated At</th>
-      <th>Created At</th>
+      <th><%= sort_link(@q, :id, "No.") %></th>
+      <th><%= sort_link(@q, :title, "Title") %></th>
+      <th><%= sort_link(@q, :content, "Content") %></th>
+      <th><%= sort_link(@q, :updated_at, "Updated At") %></th>
+      <th><%= sort_link(@q, :created_at, "Created At") %></th>
     </tr>
   </thead>
   <tbody>
