--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -7,7 +7,7 @@
     paginator:     the paginator that renders the pagination tags inside
 -%>
 <%= paginator.render do -%>
-  <nav class="pagination flex justify-center bg-white shadow-lg rounded-full p-3 gap-4" role="navigation" aria-label="pager">
+  <nav class="pagination flex justify-center bg-white shadow-lg rounded-full p-3 gap-4 bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 text-white" role="navigation" aria-label="pager">
     <%= first_page_tag unless current_page.first? %>
     <%= prev_page_tag unless current_page.first? %>
     <% each_page do |page| -%>
