Update Logout User, add column status to user

--- a/app/views/admin_users/users/_user.html.erb
+++ b/app/views/admin_users/users/_user.html.erb
@@ -1,8 +1,6 @@
 <tr>
   <td><%= user.id %></td>
   <td><%= user.email %></td>
-  <td><%= user.current_sign_in_at&.strftime('%B %d, %Y') %></td>
-  <td><%= user.last_sign_in_at&.strftime('%B %d, %Y') %></td>
-  <td><%= user.updated_at&.strftime('%B %d, %Y') %></td>
-  <td><%= user.created_at.strftime('%B %d, %Y') %></td>
+  <td><%= user.current_sign_in_at&.strftime('%B %d, %Y (%I:%M %p)') %></td>
+  <td><%= user.last_sign_in_at&.strftime('%B %d, %Y (%I:%M %p)') %></td>
 </tr>
