--- a/app/views/shared/_admin_left_side_bar.html.erb
+++ b/app/views/shared/_admin_left_side_bar.html.erb
@@ -20,6 +20,12 @@
         <span>Post Article</span>
       </li>
     <% end %>
+    <%= link_to admin_users_profile_admin_users_path do %>
+      <li class="block text-white rounded p-3 <%= 'bg-gray-700' if current_page?(admin_users_profile_admin_users_path) %> hover:bg-gray-700">
+        <i class="fa fa-shield-alt mr-3"></i>
+        <span>Profile Admin User</span>
+      </li>
+    <% end %>
   </ul>
 
   <div class="mt-auto text-center text-[30px] font-[900] bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 p-3">
