--- a/app/views/admin_users/users/profile_user.html.erb
+++ b/app/views/admin_users/users/profile_user.html.erb
@@ -6,9 +6,9 @@
                         box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);" %>
   <% end %>
   <div style="margin-top:20px; margin-bottom: 24px">
-    <div class="text-[45px] text-black font-bold"><%= @user.full_name %></div>
-    <div class="text-[20px] text-black">(<%= @user.nick_name %>)</div>
-    <div class="text-[#727272] text-[20px]"><%= @user.email %></div>
+    <div class="text-[45px] text-black font-bold"><%= @user&.full_name %></div>
+    <div class="text-[20px] text-black">(<%= @user&.nick_name %>)</div>
+    <div class="text-[#727272] text-[20px]"><%= @user&.email %></div>
   </div>
   <div style="width:100%; border: 1px solid #727272;"></div>
   <div class="flex justify-between pt-[24px] pl-[24px] pr-[24px] pb-0" style="margin-bottom: 24px">
@@ -16,15 +16,19 @@
     <div class="flex" style="gap:30px">
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">First Name:</div>
-        <div style="font-size: 18px; font-weight: 700;"><%= @user.first_name %></div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.first_name %></div>
       </div>
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">Last Name:</div>
-        <div style="font-size: 18px; font-weight: 700;"><%= @user.last_name %></div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.last_name %></div>
+      </div>
+      <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
+        <div style="font-size: 12px;">Gender:</div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.gender %></div>
       </div>
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">Date of Birth:</div>
-        <div style="font-size: 18px; font-weight: 700;"><%= @user.date_of_birth&.strftime("%m-%d-%Y") %></div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.date_of_birth&.strftime("%m-%d-%Y") %></div>
       </div>
     </div>
   </div>
@@ -34,11 +38,37 @@
     <div class="flex" style="gap:30px">
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">Email:</div>
-        <div style="font-size: 18px; font-weight: 700;"><%= @user.email %></div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.email %></div>
       </div>
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">Phone Number:</div>
-        <div style="font-size: 18px; font-weight: 700;"><%= @user.phone_number %></div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.phone_number %></div>
+      </div>
+    </div>
+  </div>
+  <div style="width:100%; border: 1px solid #727272;"></div>
+  <div class="flex justify-between pt-[24px] pl-[24px] pr-[24px] pb-0" style="margin-bottom: 24px">
+    <div class="font-bold text-2xl text-black">Address</div>
+    <div class="flex" style="gap:30px">
+      <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
+        <div style="font-size: 12px;">Street:</div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.street %></div>
+      </div>
+      <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
+        <div style="font-size: 12px;">City:</div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.city %></div>
+      </div>
+      <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
+        <div style="font-size: 12px;">State:</div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.state %></div>
+      </div>
+      <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
+        <div style="font-size: 12px;">Zip:</div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.zip %></div>
+      </div>
+      <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
+        <div style="font-size: 12px;">Country:</div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.country %></div>
       </div>
     </div>
   </div>
@@ -48,11 +78,11 @@
     <div class="flex" style="gap:30px">
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">Current Sign In At:</div>
-        <div style="font-size: 18px; font-weight: 700;"><%= @user.current_sign_in_at&.strftime("%m-%d-%Y, %I:%M %p") %></div>
+        <div style="font-size: 18px; font-weight: 700;"><%= @user&.current_sign_in_at&.strftime("%m-%d-%Y, %I:%M %p") %></div>
       </div>
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px;">Last Sign In At:</div>
-        <div style=" font-size: 18px; font-weight: 700;"><%= @user.last_sign_in_at&.strftime("%m-%d-%Y, %I:%M %p") %></div>
+        <div style=" font-size: 18px; font-weight: 700;"><%= @user&.last_sign_in_at&.strftime("%m-%d-%Y, %I:%M %p") %></div>
       </div>
       <div class="text-black" style="border: 1px solid #727272; border-radius: 8px; padding: 8px;">
         <div style="font-size: 12px">Status:</div>
