--- a/app/views/shared/_admin_left_side_bar.html.erb
+++ b/app/views/shared/_admin_left_side_bar.html.erb
@@ -20,6 +20,12 @@
         <span>Post Article</span>
       </li>
     <% end %>
+    <%= link_to admin_users_feedbacks_path do %>
+      <li class="block text-white rounded p-3 <%= 'bg-gray-700' if current_page?(admin_users_feedbacks_path) %> hover:bg-gray-700">
+        <i class="fas fa-comment-alt mr-3"></i>
+        <span>Feed Back</span>
+      </li>
+    <% end %>
     <%= link_to admin_users_profile_admin_users_path do %>
       <li class="block text-white rounded p-3 <%= 'bg-gray-700' if current_page?(admin_users_profile_admin_users_path) %> hover:bg-gray-700">
         <i class="fa fa-shield-alt mr-3"></i>
