--- a/app/views/admin_users/feedbacks/index.html.erb
+++ b/app/views/admin_users/feedbacks/index.html.erb
@@ -4,6 +4,7 @@
   </div>
   <%= search_form_for @q, url: admin_users_feedbacks_path, method: :get do |f| %>
     <%= f.search_field :id_eq, class: "search rounded-[10px] bg-white shadow-lg border-0", placeholder: "Search by ID" %>
+    <%= f.search_field :title_cont, class: "search rounded-[10px] bg-white shadow-lg border-0", placeholder: "Search by Title" %>
     <%= f.search_field :description_cont, class: "search rounded-[10px] bg-white shadow-lg border-0", placeholder: "Search by Description" %>
     <%= f.submit "Search", class: "text-white cursor-pointer bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 p-2 rounded-[10px] shadow-lg"%>
   <% end %>
@@ -12,7 +13,8 @@
   <thead class="text-left" style="border-bottom: 2px solid rgb(156 163 175)">
     <tr>
       <th><%= sort_link(@q, :id, "No.") %></th>
-      <th><%= sort_link(@q, :description, "Title") %></th>
+      <th><%= sort_link(@q, :title, "Title") %></th>
+      <th><%= sort_link(@q, :description, "Description") %></th>
       <th><%= sort_link(@q, :updated_at, "Updated At") %></th>
       <th><%= sort_link(@q, :created_at, "Created At") %></th>
     </tr>
