View Feedback User

--- a/app/views/admin_users/profile_admin_users/index.html.erb
+++ b/app/views/admin_users/profile_admin_users/index.html.erb
@@ -1,4 +1,14 @@
-<div class="flex justify-center">
+<div class="flex items-center w-full bg-white shadow-lg rounded-xl p-[24px]">
+  <div><%= image_tag "admin_user/avatar.png", style: "width: 200px; height: 200px;"%></div>
+  <div>1</div>
+  <div>1</div>
+</div>
+<div style="margin-top: 10px" class="flex flex-col w-full bg-white shadow-lg rounded-xl p-[24px]">
+  <div>1</div>
+  <div>1</div>
+  <div>1</div>
+</div>
+<div style="margin-top: 10px" class="flex flex-col w-full bg-white shadow-lg rounded-xl p-[24px]">
   <div>1</div>
   <div>1</div>
   <div>1</div>
