--- a/app/views/admin_users/feedbacks/content_feedback.html.erb
+++ b/app/views/admin_users/feedbacks/content_feedback.html.erb
@@ -1,5 +1,23 @@
-<div class="flex flex-col w-full bg-white shadow-lg rounded-xl p-10">
-  <div>FeedBack No.<%= @feedback.id %></div>
-  <div>Title: <%= @feedback.title %></div>
-  <div>Description: <%= @feedback.description %></div>
+<div class="bg-white shadow-lg rounded-xl p-6" style="font-size: 40px; font-weight: 700;">
+  FeedBack No.<%= @feedback.id %>
 </div>
+<div class="bg-white shadow-lg rounded-xl p-6" style="margin-top: 20px; font-size: 25px; font-weight: 700">
+  TITLE:<br><span style="font-weight: 400"><%= @feedback.title %></span>
+</div>
+<div class="bg-white shadow-lg rounded-xl p-6" style="margin-top: 20px; font-size: 25px; font-weight: 700">
+  DESCRIPTION:<br><span style="font-weight: 400"><%= @feedback.description %></span>
+</div>
+<% if @feedback.images.attached? %>
+  <div class="bg-white shadow-lg rounded-xl p-6" style="margin-top: 20px; font-size: 25px; font-weight: 700">
+    IMAGES:
+    <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 10px;">
+      <% @feedback.images.each do |image| %>
+        <div style="text-align: center;">
+          <%= link_to url_for(image), target: "_blank" do %>
+            <%= image_tag url_for(image), alt: "Feedback Image", style: "max-width: 200px; max-height: 200px; border-radius: 10px; cursor: pointer;" %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+<% end %>
